src/styles/articles.css
body {
  article {
    @apply prose-sm max-w-none flex-grow break-words dark:prose-invert md:prose md:max-w-none;
    & ul {
      @apply list-disc;
    }
    & ol {
      @apply list-decimal;
    }
    & li {
      @apply list-inside;
    }
    & h1 {
      @apply mt-10 font-heading;
    }
    & h2,
    h3 {
      @apply mb-3 mt-6 font-heading;
    }
    & h4 {
      @apply mb-2 mt-5 font-heading;
    }
    & h5 {
      @apply mb-2 mt-4 font-heading;
    }
    & h6 {
      @apply mb-1 mt-3 font-heading;
    }
    h2,
    h3,
    h4,
    h5,
    h6 {
      &:hover {
        a > span.heading-link-icon {
          &:after {
            content: '#';
            @apply ml-1 text-xs text-muted-foreground;
          }
        }
      }
    }
    & a {
      @apply text-link underline-offset-2 transition-colors duration-fast;
      &:hover {
        @apply text-link-hover;
      }
    }
    & code {
      @apply rounded bg-muted px-1 py-0.5 font-code text-sm;
    }
    & pre {
      @apply rounded-md;
    }
    & blockquote {
      @apply border-l-2 border-border pl-4 not-italic text-muted-foreground;
    }
    & .footnotes {
      @apply mt-8 border-t border-border pt-4 text-sm text-muted-foreground;
      & li {
        @apply list-outside;
      }
      & .data-footnote-backref {
        text-decoration: none;
      }
    }
  }
}

